--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -56,12 +56,6 @@ h1, h2, h3, h4, h5, h6 {
   transition: background 0.5s;
 }
 
-@media (max-width: 768px) {
-  .back-to-top {
-    bottom: 15px;
-  }
-}
-
 .back-to-top:focus {
   background: rgba(0, 0, 0, 0.2);
   color: #fff;
@@ -121,28 +115,9 @@ filter: brightness(175%);
   text-transform: uppercase;
   color: #fff;
 }
-
-@media (max-width: 768px) {
-  #welcome h1 {
-    font-size: 28px;
-    line-height: 36px;
-  }
-}
-
 #welcome h2 {
   color: #999;
   margin-bottom: 50px;
-}
-
-@media (max-width: 768px) {
-  #welcome h2 {
-    font-size: 24px;
-    line-height: 26px;
-    margin-bottom: 30px;
-  }
-  #welcome h2 .rotating {
-    display: block;
-  }
 }
 
 #welcome .rotating > .animated {
@@ -196,6 +171,8 @@ filter: brightness(175%);
 	display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
+	display: block;
+	overflow-x: auto;
 	justify-content: center;
 	text-align: center;
 	background-color: #cccccc;
@@ -255,17 +232,7 @@ img.icon {
   max-height: 50px;
 }
 
-@media (max-width: 768px) {
-  #header {
-    height: 80px;
-  }
-  #header #logo h1 {
-    font-size: 26px;
-  }
-  #header #logo img {
-    max-height: 40px;
-  }
-}
+
 
 .is-sticky #header {
   background: rgba(0, 0, 0, 0.85);
@@ -335,13 +302,6 @@ img.icon {
   float: right;
   margin: 5px 0;
 }
-
-@media (max-width: 768px) {
-  #nav-menu-container {
-    display: none;
-  }
-}
-
 /* Nav Meu Styling */
 .nav-menu a {
   padding: 10px 15px;
@@ -705,4 +665,111 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #footer .copyright {
   text-align: center;
+}
+
+				/*------------------------
+				max-width: 479px -- start of small mobile devices --
+				--------------------------------------------------------------*/
+@media (max-width: 479px) {
+				/*--------------------------------------------------------------
+				# Header
+				--------------------------------------------------------------*/
+	#header {
+    height: 100px;
+	}
+	#sym-text {
+	margin-left: 20%;
+	width: 125px;
+	height: 35px;
+	}
+	#add-sym {
+	}
+	#nav-menu-container {
+	display: none;
+	}
+	
+}
+				/*------------------------
+				max-width: 768px -- start of medium and large mobile devices --
+				--------------------------------------------------------------*/
+@media (max-width: 768px) {
+	h1, h2, h3, h4, h5, h6 {
+	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+	margin: 0 0 20px 0;
+	padding: 0;
+	}
+	.back-to-top {
+	bottom: 15px;
+	}
+				/*--------------------------------------------------------------
+				# Header
+				--------------------------------------------------------------*/
+	#header {
+    height: 100px;
+	}
+	#header #logo h1 {
+    font-size: 26px;
+	}
+	#header #logo img {
+    max-height: 40px;
+	}
+	#sym-text {
+	margin-left: 5%;
+	width: 125px;
+	height: 35px;
+	}
+	#add-sym {
+	}
+	#nav-menu-container {
+	display: none;
+	}
+				/*--------------------------------------------------------------
+				# Welcome
+				--------------------------------------------------------------*/
+	#welcome h1 {
+    font-size: 18px;
+    line-height: 32px;
+	}
+	#welcome h2 {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 26px;
+	}
+	#welcome h2 .rotating {
+    display: block;
+	}
+				/*--------------------------------------------------------------
+				#Data Tables
+				--------------------------------------------------------------*/
+	#coins-tb {
+	display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+	display: block;
+	overflow-x: auto;
+	justify-content: center;
+	text-align: center;
+	background-color: #cccccc;
+	width: 65%;
+	margin-left: 17%;
+	}
+	.table-responsivechart {
+    display: block;
+    width: 60%;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+	color: #292b2c;
+	border: 2px solid #6d6c6c;
+	padding: 5px;
+	}
+	.table-bordered td,
+	.table-bordered th {
+    border: 1px solid #6d6c6c !important;
+	text-align: center;
+	padding: 4px;
+	}
+	img.icon {
+	height: 1.0em;
+	}
 }
